just cleaned up all comments

--- a/about.html
+++ b/about.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 
-<!--==============================Mian Wrapper starts=============================-->
+<!--Mian Wrapper =-->
 
 <div class="wrapper">
 
-<!--========================Header Starts======================================-->
+<!--Header Starts-->
 
 	<div class="header">
 		
@@ -23,9 +23,9 @@
 
 	</div>
 
-<!--==========================Header Ends======================================-->
+<!--Header Ends-->
 
-<!--==============================Navigatin starts=============================-->
+<!--Navigatin starts-->
 
 	<div class="navigation">
 		<ul>
