--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<!--========================Header Starts======================================-->
+<!--Header Starts=-->
 
 	<div class="header">
 		
@@ -20,9 +20,9 @@
 
 	</div>
 
-<!--==========================Header Ends======================================-->
+<!--Header Ends--
 
-<!--==============================Navigatin starts=============================-->
+<!--Navigatin starts-->
 
 	<div class="navigation">
 		<ul>
